2017-03-28  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py (Dataset._ensure_large_enough):

	- Started work on a pre-allocation version for xarray datasets.  Work
	in progress.

	* typhon/physics/metrology.py (express_uncertainty):

	- When returning components, don't return the square but the regular
	version.

	* typhon/physics/em.py (SRF.estimate_band_coefficients):

	- Replaced pretty Δλ by unpretty delta_lambda because some people
	don't have an easy way to input Greek…

	- Fix bug causing mixup between α, β, and λ

	- Fix bug causing mixup between channels

	* typhon/physics/units/tools.py (UnitsAwareDataArray.__array_wrap__):

	- Fix bug when calling log/exp on UADA that has units that are
	dimensionless but not "1" (such as m/km).  Should be normalised prior
	to calling exp or all hell will break loose.

2017-03-28  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/tovs.py:

	- Replace non-ASCII-identifiers

	* typhon/physics/metrology.py(express_uncertainty):

	- Replace non-ASCII-identifiers
	- Optionally also return sensitivities and individual components, as a
	mapping.

2017-03-28  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/scattering.py (SingleScatteringData.__neq__):

	Implement not equal comparison operator.

2017-03-28  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/scattering.py (SingleScatteringData.__eq__):

	Replace fixed atol value in allclose call.

2017-03-28  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/scattering.py (SingleScatteringData.__eq__):

	Implement comparison operator.

2017-03-27  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py:

	(Dataset.read_period):

	- Move some functionality to _apply_limits_and_filters and
	_add_gran_to_data and _correct_overallocation.

	- In those methods, add support for reading datasets that return
	xarray.Dataset.  Implementation is currently stupid and needs to be
	MUCH faster.

	(MultiFileDataset.get_mandatory_fields):
